[gd_scene load_steps=12 format=3 uid="uid://b8a2sbnrfw260"]

[ext_resource type="PackedScene" uid="uid://b2i211avmpf4e" path="res://levels/level.tscn" id="1_8i3e1"]
[ext_resource type="Script" uid="uid://dj3qy5wvjw1dr" path="res://ui/start_ui/start_ui.gd" id="2_n3hmi"]
[ext_resource type="Theme" uid="uid://bnq06uyl2njxi" path="res://resources/default_theme.tres" id="3_y7364"]
[ext_resource type="FontFile" uid="uid://c6wdjj6fil2ng" path="res://ui/GemunuLibre-VariableFont_wght.ttf" id="4_oiqkb"]
[ext_resource type="Texture2D" uid="uid://oydpl4apkhsb" path="res://maps/dm2_cycle_1.png" id="5_c22ev"]
[ext_resource type="PackedScene" uid="uid://ubj2iyrcimrv" path="res://ui/focus_selector/focus_selector.tscn" id="6_hwf5f"]

[sub_resource type="FontVariation" id="FontVariation_54lsi"]
base_font = ExtResource("4_oiqkb")
variation_opentype = {
2003265652: 800
}
variation_transform = Transform2D(1, 0.265, 0, 1, 0, 0)
opentype_features = {
1801810542: 1
}

[sub_resource type="FontVariation" id="FontVariation_q2ojh"]
base_font = ExtResource("4_oiqkb")
variation_opentype = {
2003265652: 400
}
variation_transform = Transform2D(1.5, 0.5, 0, 1.25, 0, 0)
opentype_features = {
1801810542: 1
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m0kjk"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0

[sub_resource type="FontVariation" id="FontVariation_8i3e1"]
base_font = ExtResource("4_oiqkb")
variation_opentype = {
2003265652: 800
}
opentype_features = {
1801810542: 1
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2edqo"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0.059, 0.059, 0.059, 0.8)
anti_aliasing = false
anti_aliasing_size = 0.5

[node name="Level" instance=ExtResource("1_8i3e1")]
current_mode = 2

[node name="StartUI" type="CanvasLayer" parent="." index="2" node_paths=PackedStringArray("inside", "outside", "focus_outside", "map_position", "map_above", "map_below", "p1_focus", "p2_focus", "play_button", "options_button", "map_up", "map_down", "map_box", "map_container", "map_sprite", "map_sprite_holder", "map_name", "map_type", "map_extra", "add_button", "filename_edit", "url_edit", "download_container", "http_request", "toast_container", "toast_title", "toast_subtitle", "toast_in_pos", "toast_out_pos", "fade_panel")]
layer = 98
script = ExtResource("2_n3hmi")
inside = NodePath("Positions/Inside")
outside = NodePath("Positions/Outside")
focus_outside = NodePath("Positions/FocusOutside")
map_position = NodePath("Positions/MapPosition")
map_above = NodePath("Positions/MapAbove")
map_below = NodePath("Positions/MapBelow")
p1_focus = NodePath("FocusP1")
p2_focus = NodePath("FocusP2")
play_button = NodePath("InitialContainer/VBoxContainer/Play")
options_button = NodePath("InitialContainer/VBoxContainer/Options")
map_up = NodePath("MapContainer/HBoxContainer/Arrows/ButtonUp")
map_down = NodePath("MapContainer/HBoxContainer/Arrows/ButtonDown")
map_box = NodePath("MapContainer/HBoxContainer/MapBox")
map_container = NodePath("MapContainer")
map_sprite = NodePath("MapContainer/HBoxContainer/MapBox/VBoxContainer/Control/Node2D/Sprite2D")
map_sprite_holder = NodePath("MapContainer/HBoxContainer/MapBox/VBoxContainer/Control/Node2D")
map_name = NodePath("MapContainer/HBoxContainer/MapBox/VBoxContainer/Label")
map_type = NodePath("MapContainer/HBoxContainer/MapBox/VBoxContainer/Label2")
map_extra = NodePath("MapContainer/HBoxContainer/MapBox/VBoxContainer/Label3")
map_scale = Vector2(2, 1)
add_button = NodePath("MapContainer/HBoxContainer/VBoxContainer/Add")
filename_edit = NodePath("MarginContainer/Download/FilenameEdit")
url_edit = NodePath("MarginContainer/Download/URLEdit")
download_container = NodePath("MarginContainer/Download")
http_request = NodePath("HTTPRequest")
toast_container = NodePath("Toast")
toast_title = NodePath("Toast/Title")
toast_subtitle = NodePath("Toast/Subtitle")
toast_in_pos = NodePath("Positions/ToastIn")
toast_out_pos = NodePath("Positions/ToastOut")
fade_panel = NodePath("../Environment/ScreenEffects/FadePanel")

[node name="TitleContainer" type="MarginContainer" parent="StartUI" index="0"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
mouse_force_pass_scroll_events = false
theme = ExtResource("3_y7364")
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8

[node name="RichTextLabel" type="RichTextLabel" parent="StartUI/TitleContainer" index="0"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/line_separation = -16
theme_override_fonts/normal_font = SubResource("FontVariation_54lsi")
theme_override_fonts/italics_font = SubResource("FontVariation_q2ojh")
theme_override_font_sizes/normal_font_size = 64
theme_override_font_sizes/italics_font_size = 24
bbcode_enabled = true
text = " [wave amp=50 freq=1]Spatial[/wave]
[wave amp=50 freq=-1]Forces[/wave][wave amp=20 freq=4][i]d x[/i]"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
custom_effects = [null]

[node name="MapContainer" type="MarginContainer" parent="StartUI" index="1"]
custom_minimum_size = Vector2(350, 0)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -189.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 3
theme = ExtResource("3_y7364")
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="StartUI/MapContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Arrows" type="VBoxContainer" parent="StartUI/MapContainer/HBoxContainer" index="0"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 60

[node name="ButtonUp" type="Control" parent="StartUI/MapContainer/HBoxContainer/Arrows" index="0"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
focus_neighbor_left = NodePath("../../../../InitialContainer/VBoxContainer/Play")
focus_neighbor_right = NodePath("../../VBoxContainer/Go")
focus_neighbor_bottom = NodePath("../ButtonDown")

[node name="Polygon2D" type="Polygon2D" parent="StartUI/MapContainer/HBoxContainer/Arrows/ButtonUp" index="0"]
polygon = PackedVector2Array(22, 10, 22, 12, -22, 12, -22, 10, -1, -11, 1, -11)

[node name="ButtonDown" type="Control" parent="StartUI/MapContainer/HBoxContainer/Arrows" index="1"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
focus_neighbor_left = NodePath("../../../../InitialContainer/VBoxContainer/Play")
focus_neighbor_top = NodePath("../ButtonUp")
focus_neighbor_right = NodePath("../../VBoxContainer/Add")

[node name="Polygon2D2" type="Polygon2D" parent="StartUI/MapContainer/HBoxContainer/Arrows/ButtonDown" index="0"]
rotation = 3.14159
polygon = PackedVector2Array(22, 10, 22, 12, -22, 12, -22, 10, -1, -11, 1, -11)

[node name="MapBox" type="Control" parent="StartUI/MapContainer/HBoxContainer" index="1"]
custom_minimum_size = Vector2(196, 180)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="StartUI/MapContainer/HBoxContainer/MapBox" index="0"]
layout_mode = 0
offset_right = 196.0
offset_bottom = 180.0
size_flags_vertical = 3
theme_override_constants/separation = 0
alignment = 1

[node name="Control" type="Control" parent="StartUI/MapContainer/HBoxContainer/MapBox/VBoxContainer" index="0"]
custom_minimum_size = Vector2(0, 136)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Node2D" type="Node2D" parent="StartUI/MapContainer/HBoxContainer/MapBox/VBoxContainer/Control" index="0"]
position = Vector2(0, 82)

[node name="Sprite2D" type="Sprite2D" parent="StartUI/MapContainer/HBoxContainer/MapBox/VBoxContainer/Control/Node2D" index="0"]
texture = ExtResource("5_c22ev")

[node name="Label" type="Label" parent="StartUI/MapContainer/HBoxContainer/MapBox/VBoxContainer" index="1"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "dm2_cycle_3.png"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Label2" type="Label" parent="StartUI/MapContainer/HBoxContainer/MapBox/VBoxContainer" index="2"]
layout_mode = 2
text = "2-player deathmatch"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="StartUI/MapContainer/HBoxContainer/MapBox/VBoxContainer" index="3"]
layout_mode = 2
text = "3 rounds
"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="StartUI/MapContainer/HBoxContainer" index="2"]
layout_mode = 2
alignment = 1

[node name="Go" type="Button" parent="StartUI/MapContainer/HBoxContainer/VBoxContainer" index="0"]
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_left = NodePath("../../Arrows/ButtonUp")
focus_neighbor_bottom = NodePath("../Add")
focus_mode = 0
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_m0kjk")
text = "GO!"
flat = true

[node name="Add" type="Button" parent="StartUI/MapContainer/HBoxContainer/VBoxContainer" index="1"]
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_left = NodePath("../../Arrows/ButtonDown")
focus_neighbor_top = NodePath("../Go")
focus_mode = 0
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_m0kjk")
text = "ADD"
flat = true

[node name="InitialContainer" type="MarginContainer" parent="StartUI" index="2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_y7364")
theme_override_constants/margin_left = 16
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="StartUI/InitialContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = -10

[node name="Play" type="Button" parent="StartUI/InitialContainer/VBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_neighbor_bottom = NodePath("../Options")
focus_mode = 0
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxEmpty_m0kjk")
text = "PLAY"
flat = true
alignment = 0

[node name="Options" type="Button" parent="StartUI/InitialContainer/VBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Play")
focus_neighbor_bottom = NodePath("../Exit")
focus_mode = 0
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxEmpty_m0kjk")
text = "OPTIONS"
flat = true
alignment = 0

[node name="Exit" type="Button" parent="StartUI/InitialContainer/VBoxContainer" index="2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Options")
focus_mode = 0
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxEmpty_m0kjk")
text = "EXIT"
flat = true
alignment = 0

[node name="Positions" type="Control" parent="StartUI" index="3"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Inside" type="Control" parent="StartUI/Positions" index="0"]
anchors_preset = 0
offset_left = 290.0
offset_right = 290.0

[node name="Outside" type="Control" parent="StartUI/Positions" index="1"]
anchors_preset = 0
offset_left = 640.0
offset_right = 640.0

[node name="FocusOutside" type="Control" parent="StartUI/Positions" index="2"]
anchors_preset = 0
offset_left = -128.0
offset_top = -128.0
offset_right = -128.0
offset_bottom = -128.0

[node name="MapPosition" type="Control" parent="StartUI/Positions" index="3"]
anchors_preset = 0
offset_left = 358.0
offset_top = 90.0
offset_right = 358.0
offset_bottom = 90.0

[node name="MapAbove" type="Control" parent="StartUI/Positions" index="4"]
anchors_preset = 0
offset_left = 358.0
offset_top = -180.0
offset_right = 358.0
offset_bottom = -180.0

[node name="MapBelow" type="Control" parent="StartUI/Positions" index="5"]
anchors_preset = 0
offset_left = 358.0
offset_top = 400.0
offset_right = 358.0
offset_bottom = 400.0

[node name="ToastIn" type="Control" parent="StartUI/Positions" index="6"]
anchors_preset = 0
offset_left = 320.0
offset_top = 310.0
offset_right = 320.0
offset_bottom = 310.0

[node name="ToastOut" type="Control" parent="StartUI/Positions" index="7"]
anchors_preset = 0
offset_left = 320.0
offset_top = 360.0
offset_right = 320.0
offset_bottom = 360.0

[node name="Toast" type="VBoxContainer" parent="StartUI" index="4"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -131.5
offset_top = -40.0
offset_right = 131.5
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Title" type="Label" parent="StartUI/Toast" index="0"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = SubResource("FontVariation_8i3e1")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="StartUI/Toast" index="1"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = SubResource("FontVariation_8i3e1")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="StartUI" index="5"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -67.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 6

[node name="Download" type="VBoxContainer" parent="StartUI/MarginContainer" index="0"]
visible = false
layout_mode = 2
theme_override_constants/separation = 6

[node name="FilenameEdit" type="LineEdit" parent="StartUI/MarginContainer/Download" index="0"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
focus_neighbor_bottom = NodePath("../URLEdit")
focus_next = NodePath("../URLEdit")
theme = ExtResource("3_y7364")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_2edqo")
placeholder_text = "Filename"
caret_blink = true

[node name="URLEdit" type="LineEdit" parent="StartUI/MarginContainer/Download" index="1"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../FilenameEdit")
focus_previous = NodePath("../FilenameEdit")
theme = ExtResource("3_y7364")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_2edqo")
placeholder_text = "Image URL"
caret_blink = true

[node name="HTTPRequest" type="HTTPRequest" parent="StartUI" index="6"]
timeout = 10.0

[node name="FocusP1" parent="StartUI" index="7" instance=ExtResource("6_hwf5f")]

[node name="FocusP2" parent="StartUI" index="8" instance=ExtResource("6_hwf5f")]
player = 1
desired_spin_speed = -0.785

[connection signal="focus_entered" from="StartUI/MapContainer/HBoxContainer/Arrows/ButtonUp" to="StartUI" method="_on_button_up_focus_entered"]
[connection signal="focus_entered" from="StartUI/MapContainer/HBoxContainer/Arrows/ButtonDown" to="StartUI" method="_on_button_down_focus_entered"]
[connection signal="focus_entered" from="StartUI/MapContainer/HBoxContainer/VBoxContainer/Go" to="StartUI" method="_on_go_focus_entered"]
[connection signal="focus_entered" from="StartUI/MapContainer/HBoxContainer/VBoxContainer/Add" to="StartUI" method="_on_add_focus_entered"]
[connection signal="focus_entered" from="StartUI/InitialContainer/VBoxContainer/Play" to="StartUI" method="_on_play_focus_entered"]
[connection signal="focus_entered" from="StartUI/InitialContainer/VBoxContainer/Exit" to="StartUI" method="_on_exit_focus_entered"]
[connection signal="text_changed" from="StartUI/MarginContainer/Download/FilenameEdit" to="StartUI" method="_on_filename_edit_text_changed"]
[connection signal="text_submitted" from="StartUI/MarginContainer/Download/URLEdit" to="StartUI" method="_on_url_edit_text_submitted"]
[connection signal="request_completed" from="StartUI/HTTPRequest" to="StartUI" method="_on_http_request_request_completed"]
